--- a/client/src/components/MusicPlayer/musicplayer.css
+++ b/client/src/components/MusicPlayer/musicplayer.css
@@ -1,6 +1,5 @@
 .music-player-container {
     max-width: 800px;
-    margin: 0 auto;
     overflow-x: scroll;
     height: 40px;
 }
@@ -10,6 +9,21 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+}
+
+.search-input {
+    padding: 10px;
+    max-width: 50%;
+    max-height: 25px;
+    font-weight: 500;
+    border-radius: 4px;
+    font-size: 14px;
+    line-height: 22px;
+    letter-spacing: 0.5px;
+    color: #c4c3ca;
+    background-color: #1f2029;
+    border: none;
+    transition: all 200ms linear;
 }
 
 .songsList {
